security: hardening completo de la app
- Eliminar secretos hardcodeados: JWT_SECRET e IMGBB_API_KEY sin valor por defecto
- Reducir expiración JWT de 24h a 1h
- CORS restringido a orígenes explícitos (env var cors.allowed-origins)
- WebSocket: rechazar conexiones sin token JWT válido (evita crash DoS)
- Rate limiter: extender a /registro y corregir bypass via X-Forwarded-For
- ddl-auto=validate en producción (era update)
- Endpoint /presencia requiere autenticación
- eliminarConversacion solo borra mensajes propios (no los del otro usuario)
- Upload: validar tipo MIME antes de enviar a ImgBB
- XSS: aplicar escapeHtml en buscar.html, index.html y chat contactos/header

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>